--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ title: Almir Aljic
 email: almir.aljic8991@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Resume & Tech Blog
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: -
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://aljica.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: none
 github_username:  aljica
 
 # Build settings
