--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Almir Aljic
 email: almir.aljic8991@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Resume & Tech Blog
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://aljica.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://aljica.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: -
 github_username:  aljica
 
