--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Almir Aljic
-email: almir.aljic8991@gmail.com
+title: aljica
+email: aljica@kth.se
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://aljica.github.io" # the base hostname & protocol for your site, e.g. http://example.com
